istio-example/0-namespace.yaml
# 0-namespace.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: hedgus
  labels:
    monitoring: prometheus
    istio-injection: enabled
